--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,11 @@
 			<version>3.15</version>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
-<!-- 		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-collections4</artifactId>
-		    <version>4.0</version>
-		</dependency> -->
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		</dependency>
 		
 	</dependencies>
 
